set default java opts
Signed-off-by: Sergii Kabashniuk <skabashniuk@redhat.com>